--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img
+      src="https://images.unsplash.com/photo-1574870111867-089730e5a72b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YW5pbWFsc3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=700&q=60"
+    />
+    <img
+      src="https://images.unsplash.com/photo-1484406566174-9da000fda645?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=689&q=80"
+      alt="image of a deer"
+    />
+    <img
+      src="https://images.unsplash.com/photo-1591824438708-ce405f36ba3d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+      alt="image of a tigre"
+      title="tiger on the road, Kanha nat. park, India"
+    />
   </body>
 </html>
